#myBtn {          position: fixed;      bottom: 20px;     right: 20px;      z-index: 99;      border: none;      outline: none;      background-color:var(--main-color);     color: white;      cursor: pointer;      padding: 15px;      border-radius: 10px;      font-size: 18px;    }

--- a/css/style.css
+++ b/css/style.css
@@ -584,6 +584,22 @@ section{
         width: 100%;
     }
 
+    #myBtn {
+    
+        position: fixed; 
+        bottom: 7px;
+        right: 4px; 
+        z-index: 99; 
+        border: none; 
+        outline: none; 
+        background-color:var(--main-color);
+        color: white; 
+        cursor: pointer; 
+        padding: 15px; 
+        border-radius: 6px; 
+        font-size: 7px; 
+      }
+
     
 
 
